Make the backup+archiver opts dynamic
