# apis/wizards/v1alpha1/kubedbcom_druid_editor_options_types.go
@@ -56,6 +56,8 @@ type KubedbcomDruidEditorOptionsSpecSpec struct {
 	Admin           AdminOptions         `json:"admin"`
 	Backup          BackupToolSpec       `json:"backup"`
 	Monitoring      MonitoringOperator   `json:"monitoring"`
+	// +optional
+	Openshift Openshift `json:"openshift"`
 }
 
 type DruidNode struct {
