# apis/wizards/v1alpha1/kubedbcom_mariadb_editor_options_types.go
@@ -58,6 +58,8 @@ type KubedbcomMariadbEditorOptionsSpecSpec struct {
 	Admin          AdminOptions       `json:"admin"`
 	Backup         BackupToolSpec     `json:"backup"`
 	Monitoring     MonitoringOperator `json:"monitoring"`
+	// +optional
+	Openshift Openshift `json:"openshift"`
 }
 
 type MariadbAlertsSpecForm struct {
