# apis/wizards/v1alpha1/kubedbcom_memcached_editor_options_types.go
@@ -54,6 +54,8 @@ type KubedbcomMemcachedEditorOptionsSpecSpec struct {
 	Admin          AdminOptions       `json:"admin"`
 	Backup         BackupToolSpec     `json:"backup"`
 	Monitoring     MonitoringOperator `json:"monitoring"`
+	// +optional
+	Openshift Openshift `json:"openshift"`
 }
 
 // *** Alerts *** //
