# apis/wizards/v1alpha1/kubedbcom_mssqlserver_editor_options_types.go
@@ -60,6 +60,8 @@ type KubedbcomMssqlserverEditorOptionsSpecSpec struct {
 	Admin          AdminOptions        `json:"admin"`
 	Backup         BackupToolSpec      `json:"backup"`
 	Monitoring     MonitoringOperator  `json:"monitoring"`
+	// +optional
+	Openshift Openshift `json:"openshift"`
 }
 
 // +kubebuilder:validation:Enum=Standalone;Topology
