# apis/wizards/v1alpha1/kubedbcom_singlestore_editor_options_types.go
@@ -57,6 +57,8 @@ type KubedbcomSinglestoreEditorOptionsSpecSpec struct {
 	Admin          AdminOptions        `json:"admin"`
 	Backup         BackupToolSpec      `json:"backup"`
 	Monitoring     MonitoringOperator  `json:"monitoring"`
+	// +optional
+	Openshift Openshift `json:"openshift"`
 }
 
 // +kubebuilder:validation:Enum=Standalone;Topology
